--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
         </section>
         <section class="section-meals">
-            <ul class="meals-showcase">
+            <ul class="meals-showcase clearfix">
                 <li>
                     <figure class="meal-photo">
                         <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables" />
@@ -89,7 +89,7 @@
                     </figure>
                 </li>
             </ul>
-            <ul class="meals-showcase">
+            <ul class="meals-showcase clearfix">
                 <li>
                     <figure class="meal-photo">
                         <img src="resources/img/5.jpg" alt="Paleo beef steak with vegetables" />
@@ -112,7 +112,134 @@
                 </li>
             </ul>
         </section>
+        <section class="section-steps">
+            <div class="row">
+                <h2>How it works &mdash; Simple as 1, 2, 3</h2>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-2 steps-box">
+                    <img src="resources/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen" />
+                </div>
+                <div class="col span-1-of-2 steps-box">
+                    <div class="works-step">
+                        <div>1</div>
+                        <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+                    </div>
+                    <div class="works-step">
+                        <div>2</div>
+                        <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+                    </div>
+                    <div class="works-step">
+                        <div>3</div>
+                        <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
+                    </div>
+                    <a href="#" class="btn-app"><img src="resources/img/download-app.svg" alt="App Store Button"/></a>
+                    <a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="Android Button"/></a>
+                </div>
+            </div>
+        </section>
+        <section class="section-cities">
+            <div class="row">
+                <h2>We're currently in these cities</h2>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-4 box">
+                    <img src="resources/img/lisbon-3.jpg" alt="Lisbon" />
+                    <h3>Lisbon</h3>
+                    <div class="city-feature">
+                        <ion-icon name="person-circle-outline" class="icon-small"></ion-icon>
+                        1600+ happy eaters
+                    </div>
+                    <div class="city-feature">
+                        <ion-icon name="star" class="icon-small"></ion-icon>
+                        60+ top chefs
+                    </div>
+                    <div class="city-feature">
+                        <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
+                        <a href="#">@omnifood_lx</a>
+                    </div>
+                </div>
+                <div class="col span-1-of-4 box">
+                    <img src="resources/img/san-francisco.jpg" alt="San Francisco" />
+                    <h3>Lisbon</h3>
+                    <div class="city-feature">
+                        <ion-icon name="person-circle-outline" class="icon-small"></ion-icon>
+                        3700+ happy eaters
+                    </div>
+                    <div class="city-feature">
+                        <ion-icon name="star" class="icon-small"></ion-icon>
+                        160+ top chefs
+                    </div>
+                    <div class="city-feature">
+                        <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
+                        <a href="#">@omnifood_sf</a>
+                    </div>
+                </div>
+                <div class="col span-1-of-4 box">
+                    <img src="resources/img/berlin.jpg" alt="Berlin" />
+                    <h3>Lisbon</h3>
+                    <div class="city-feature">
+                        <ion-icon name="person-circle-outline" class="icon-small"></ion-icon>
+                        2300+ happy eaters
+                    </div>
+                    <div class="city-feature">
+                        <ion-icon name="star" class="icon-small"></ion-icon>
+                        110+ top chefs
+                    </div>
+                    <div class="city-feature">
+                        <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
+                        <a href="#">@omnifood_berlin</a>
+                    </div>
+                </div>
+                <div class="col span-1-of-4 box">
+                    <img src="resources/img/london.jpg" alt="London" />
+                    <h3>Lisbon</h3>
+                    <div class="city-feature" >
+                        <ion-icon name="person-circle-outline" class="icon-small"></ion-icon>
+                        1200+ happy eaters
+                    </div>
+                    <div class="city-feature">
+                        <ion-icon name="star" class="icon-small"></ion-icon>
+                        50+ top chefs
+                    </div>
+                    <div class="city-feature">
+                        <ion-icon name="logo-twitter" class="icon-small"></ion-icon>
+                        <a href="#">@omnifood_london</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-testimonials">
+            <div class="row">
+                <h2>Our customers can't live without us</h2>
+            </div>
+            <div class="row">
+                <div class="row span-1-of-3">
+                    <blockquote>
+                        Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+(Alberto Duncan)
+                    </blockquote>
+                    <cite><img src="resources/img/customer-1.jpg"/> Alberto Duncan</cite>
+                </div>
+            </div>
+        </section>
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </body>
 </html>
+
+<!--
+
+Section 5: Customer testimonials
+Title: Our customers can't live without us
+
+Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+(Alberto Duncan)
+
+Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
+(Joana Silva)
+
+I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
+(Milton Chapman)
+
+-->
